--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,8 +7,37 @@
 @import "bootstrap/scss/bootstrap";
 @import "font-awesome-sprockets";
 @import "font-awesome";
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
 @import "pages/show";
+@import "pages/new";
+@import "components/footer";
+
+.banner{
+  width: 100%;
+  height: 48px;
+  background-color: #1AC8ED;
+
+}
+
+.logo{
+  display: flex;
+  align-items: center;
+  padding-left: 8px;
+  a{
+    font-family: 'Press Start 2P', cursive;
+    font-size: 24px;
+    color: white;
+    margin: 8px;
+    text-decoration: none !important;
+  }
+}
+
+.flex-wrapper {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
