--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -1,4 +1,5 @@
-#location-results{
-  position: relative;
-  top: -16px;
+h2{
+  font-family: 'Press Start 2P';
+  font-weight: bold;
+  font-size: 20px;
 }
