--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -3,3 +3,19 @@ h2{
   font-weight: bold;
   font-size: 20px;
 }
+
+#map{
+  height: 90vh;;
+  width: 100%;
+  background-color: white;
+}
+
+p{
+  font-weight: lighter;
+  font-size: 10px
+}
+
+.card{
+  padding: 13px;
+  margin: 16px;
+}
