--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -2,3 +2,12 @@
 @import "alert";
 @import "avatar";
 @import "navbar";
+
+#map{
+  height: 90vh;
+  width: 100%;
+  background-color: white;
+  position: sticky;
+  top: 0;
+  z-index: 1020;
+}
