fixe font in new

--- a/app/assets/stylesheets/pages/_new.scss
+++ b/app/assets/stylesheets/pages/_new.scss
@@ -1,6 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 #location-results{
     position: relative;
     top: -16px;
   }
-  
+
+.simple_form {
+  font-family: 'Roboto', sans-serif;
+}
+
+
   
