--- a/app/views/geomems/new.html.erb
+++ b/app/views/geomems/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container mt-3">
   <h2>New memory</h2>
   <%= simple_form_for @geomem do |f| %>
     <%= f.input :title %>
