--- a/app/views/geomems/show.html.erb
+++ b/app/views/geomems/show.html.erb
@@ -18,4 +18,4 @@
       <div id='map'></div>
     </div>
 </div>
-<!--<%= javascript_pack_tag 'show_map' %>-->
+<%= javascript_pack_tag 'show_map' %>
