--- a/app/views/geomems/show.html.erb
+++ b/app/views/geomems/show.html.erb
@@ -7,6 +7,7 @@
         <%= cl_image_tag @geomem.photo.key, height: 500, crop: :fill %>
         <div class="card mt-3">
           <p><%=@geomem.description%></p>
+          <p hidden id="coord"><%=@geomem.coordinates%></p>
           <div class="options d-flex justify-content-center">
             <%= link_to "", geomem_path(@geomem), method: :delete, data: { confirm: "Are you sure?" }, class:"btn btn-danger fas fa-trash-alt"%>
             <%= link_to "", edit_geomem_path, class:"btn btn-primary fas fa-edit" %>
