--- a/app/views/geomems/index.html.erb
+++ b/app/views/geomems/index.html.erb
@@ -16,8 +16,11 @@
       </div>  
     </div>
     <div class="col-12 col-md-12 col-lg-4">
-      <div id='map' class="banner"></div>
+     <div id="map"
+     style="width: 100%; height: 90vh;"
+     data-markers="<%= @markers.to_json %>"
+     data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"></div>
+     </div>
     </div>
   </div>
 </div>
-<%= javascript_pack_tag 'index_map' %>
