--- a/app/views/geomems/index.html.erb
+++ b/app/views/geomems/index.html.erb
@@ -5,7 +5,7 @@
       <div class="cards">
         <%@geomems.each do |memory|%>
           <%= link_to geomem_path(memory) do %>
-            <div class="polaroidnew">
+            <div class="polaroidnew" id="<%=memory.id%>">
               <%= cl_image_tag memory.photo.key, height: 250, width: 250, crop: :fill %>
               <p class="mt-3"><%=memory.location%></p>
               <p hidden id="js-coord"><%=memory.coordinates%></p>
