--- a/app/views/geomems/show.html.erb
+++ b/app/views/geomems/show.html.erb
@@ -16,7 +16,9 @@
       </div>
     </div>
     <div class="col-12 col-lg-4">
-      <div id='map'></div>
+      <div id="map"
+       style="width: 100%; height: 90vh;"
+       data-markers="<%= @markers.to_json %>"
+       data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
     </div>
 </div>
-<%= javascript_pack_tag 'show_map' %>
