--- a/app/assets/stylesheets/components/_polaroid.scss
+++ b/app/assets/stylesheets/components/_polaroid.scss
@@ -1,28 +1,3 @@
-.polaroid a {
-    background: #ffffff;
-    font-family: 'Press Start 2P';
-    font-size: 10px;
-    font-weight: bold;
-    display: inline-block;
-    padding: 5px 5px 30px;
-    text-align: center;
-    text-decoration: none;
-  }
-  .polaroid a:after {
-    color: #333;
-    font-size: 10px;
-    content: attr(title);
-    position: relative;
-    top: 15px;
-  }
-  .polaroid img {
-    display: block;
-    width: 250px;
-  }
-  .polaroid a:hover {
-    box-shadow: 0 0 15px rgba(0,0,0,0.2);
-  }
-
   .polaroidnew{
     overflow: hidden;
     background-color: white;
@@ -38,7 +13,6 @@
     }
     &:hover{
       color: black;
-      text-decoration: none;
       box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
     }
     img {
@@ -47,12 +21,9 @@
       margin-left: auto;
       margin-right: auto;
     }
-    .pol-title{
-      
-    }
   }
 a{
-  p{
+  &:hover{
     text-decoration: none;
   }
 }
