Made it a bit more responsive

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -1,7 +1,7 @@
 .cards {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-gap: 16px;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-gap: 8px;
   }
   
   // Smallest device
@@ -26,15 +26,15 @@
   }
   
   // Large devices (desktops, 992px and up)
-  @media (min-width: 992px) {
+  @media (min-width: 1390px) {
     .cards {
       grid-template-columns: 1fr 1fr 1fr;
     }
   }
   
   // Extra large devices (large desktops, 1200px and up)
-  @media (min-width: 1200px) {
+  @media (min-width: 1830px) {
     .cards {
-      grid-template-columns: 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr 1fr;
     }
   }
