--- a/app/views/geomems/index.html.erb
+++ b/app/views/geomems/index.html.erb
@@ -1,7 +1,7 @@
 <div class="conatiner">
   <div class="row justify-content-between">
-    <div class="col-12 col-md-12 col-lg-8">
-      <h2 class="text-center mb-1"><i class="fas fa-heart"></i> Here are your memories <i class="fas fa-heart"></i></h2>
+    <div class="col-12 col-md-12 col-lg-8 mt-3">
+      <h2 class="text-center"><i class="fas fa-heart"></i> Here are your memories <i class="fas fa-heart"></i></h2>
       <div class="cards grd">
         <%@geomems.each do |memory|%>
           <%= link_to geomem_path(memory) do %>
@@ -15,7 +15,7 @@
         <%end%>
       </div>  
     </div>
-    <div class="col-12 col-md-12 col-lg-4">
+    <div class="col-12 col-md-12 col-lg-4 pt-3">
      <div id="map"
      style="width: 100%; height: 90vh;"
      data-markers="<%= @markers.to_json %>"
