--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
   
   <body>
     <div class="flex-wrapper">
-      <div class="banner d-flex justify-content-between mb-3">
+      <div class="banner d-flex justify-content-between">
         <div class="logo">
           <%= image_tag 'world.png', height: 35, width: 35 %>
           <%= link_to "Geo-Memories" , geomems_path %>
