Style of location

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -16,3 +16,15 @@
   padding: 16px 8px;
   word-wrap: break-word
 }
+
+.post-date{
+  font-size: 6px;
+  font-style: italic;
+  font-weight: lighter;
+  color: #0000008c !important;
+}
+
+.pol-lct{
+  font-size: 8px;
+  color: #6c1aed96 !important;
+}
