--- a/app/views/geomems/index.html.erb
+++ b/app/views/geomems/index.html.erb
@@ -7,13 +7,13 @@
           <%= link_to geomem_path(memory) do %>
             <div class="polaroidnew" id="<%=memory.id%>">
               <%= cl_image_tag memory.photo.key, height: 250, width: 250, crop: :fill %>
-              <p class="mt-3"><%=memory.location%></p>
+              <p class="pol-lct mt-3"><%=memory.location%></p>
               <%if (Time.zone.now.day - memory.created_at.day) > 1%>
-                <p>Posted <%=Time.zone.now.day - memory.created_at.day%> days ago</p>
+                <p class="post-date">Posted <%=Time.zone.now.day - memory.created_at.day%> days ago</p>
               <%elsif (Time.zone.now.day - memory.created_at.day) == 1 %>
-                <p>Posted yesterday</p>
+                <p class="post-date">Posted yesterday</p>
               <%else%>
-                <p>Posted today</p>
+                <p class="post-date">Posted today</p>
               <%end%>
               <p hidden id="js-coord"><%=memory.coordinates%></p>
               <p class="pol-title"><%=memory.title%></p>
