--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -28,3 +28,9 @@
   font-size: 8px;
   color: #6c1aed96 !important;
 }
+
+.red-px-heart{
+    width: 50px;
+    height: 50px;
+    display: block;
+}
