--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,38 +18,9 @@
 @import "components/footer";
 @import "components/cards";
 @import "components/polaroid";
+@import "components/navbar";
 
 body{
   font-family: 'Press Start 2P';
 }
 
-.banner{
-  width: 100%;
-  height: 48px;
-  background-color: #1AC8ED;
-
-}
-
-.logo{
-  display: flex;
-  align-items: center;
-  padding-left: 8px;
-  a{
-    font-family: 'Press Start 2P', cursive;
-    font-size: 24px;
-    color: white;
-    margin: 8px;
-    text-decoration: none !important;
-  }
-}
-
-.flex-wrapper {
-  display: flex;
-  min-height: 90vh;
-  flex-direction: column;
-}
-
-.add-new{
-  padding-right: 16px;
-  padding-top: 6px;
-}
