--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,12 +1,30 @@
-.navbar-lewagon {
-  justify-content: space-between;
-  background: white;
+
+.banner{
+  width: 100%;
+  height: 48px;
+  background-color:#a87ff5;
 }
 
-.navbar-lewagon .navbar-collapse {
-  flex-grow: 0;
+.logo{
+  display: flex;
+  align-items: center;
+  padding-left: 8px;
+  a{
+    font-family: 'Press Start 2P', cursive;
+    font-size: 24px;
+    color: white;
+    margin: 8px;
+    text-decoration: none !important;
+  }
 }
 
-.navbar-lewagon .navbar-brand img {
-  width: 40px;
+.flex-wrapper {
+  display: flex;
+  min-height: 90vh;
+  flex-direction: column;
+}
+
+.add-new{
+  padding-right: 16px;
+  padding-top: 6px;
 }
