--- a/app/views/geomems/show.html.erb
+++ b/app/views/geomems/show.html.erb
@@ -14,6 +14,13 @@
           </div>
         </div>
       </div>
+      <div class="card">
+        <%= simple_form_for([ @geomem, @comment ]) do |f| %>
+          <%= f.input :username%>
+          <%= f.input :content, as: :text %>
+          <%= f.button :submit %>
+        <% end %>
+      </div>
     </div>
     <div class="col-12 col-lg-4">
       <div id="map"
