Comment box hidden

--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -19,3 +19,14 @@ p{
   padding: 13px;
   margin: 16px;
 }
+
+#show-link{
+  font-size: 10px;
+  margin-left: 16px;
+  color: #a87ff5;
+}
+
+.comm-box{
+  overflow: hidden;
+  height: 0px;
+}
