--- a/app/views/geomems/show.html.erb
+++ b/app/views/geomems/show.html.erb
@@ -14,8 +14,9 @@
           </div>
         </div>
       </div>
-      <div class="card">
-        <%= simple_form_for([ @geomem, @comment ]) do |f| %>
+      <a id="show-link" href="#" onclick="return false;">Dont be shy, leave a comment!</a>
+      <div class="container comm-box">
+        <%= simple_form_for([ @geomem, @comment ], remote: true) do |f| %>
           <%= f.input :username%>
           <%= f.input :content, as: :text %>
           <%= f.button :submit %>
