Added random cool avatar

--- a/app/views/geomems/show.html.erb
+++ b/app/views/geomems/show.html.erb
@@ -24,9 +24,12 @@
       </div>
       <%if @geomem.comments.any?%>
         <%@geomem.comments.each do |comment|%>
-          <div class="card comment">
-            <p><%=comment.username%></p>
-            <p><%=comment.content%></p>
+          <div class="card comment d-flex">
+            <div class="comment-avatar"></div>
+            <div>
+              <p><%=comment.username%></p>
+              <p><%=comment.content%></p>
+            </div>
           </div>
         <%end%>
       <% else %>
