--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -30,3 +30,21 @@ p{
   overflow: hidden;
   height: 0px;
 }
+
+.comment{
+  display: flex;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.125);
+  border-top: 1px solid rgba(0, 0, 0, 0.125);
+  width: 100%;
+  margin-left: 16px;
+  line-height: 6px;
+  padding: 16px 16px;
+  &:hover{
+    background-color: #f0eeee;
+  }
+}
+
+.comment-content{
+  padding-left: 16px;
+  line-height: 8px
+}
