added style to comnt section

--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -24,11 +24,14 @@ p{
   font-size: 10px;
   margin-left: 16px;
   color: #a87ff5;
+  margin-bottom: 16px;
 }
 
 .comm-box{
   overflow: hidden;
   height: 0px;
+  font-family: 'Press Start 2P' !important;
+  border-top: 16px;
 }
 
 .comment{
