--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -51,3 +51,10 @@ p{
   padding-left: 16px;
   line-height: 8px
 }
+
+@media screen and (max-width: 480px) {
+  .show-pic {
+       width: 400px;
+       height: auto;
+  }
+}
