made show page look better in mbile

--- a/app/views/geomems/show.html.erb
+++ b/app/views/geomems/show.html.erb
@@ -1,4 +1,4 @@
-<div class="conatiner">
+<div class="conatiner" style="margin: 16px;">
   <div class="row justify-content-between">
     <div class="col-12 col-lg-8 pl-3">
       <div class="text-center">
