show page pic responsive

--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -52,9 +52,12 @@ p{
   line-height: 8px
 }
 
+.show-pic{
+  max-width: 100%;
+}
+
 @media screen and (max-width: 480px) {
   .show-pic {
-       width: 400px;
        height: auto;
        padding: 0px 16px;
   }
