--- a/app/views/geomems/index.html.erb
+++ b/app/views/geomems/index.html.erb
@@ -1,4 +1,4 @@
-<div class="conatiner">
+<div class="contnr" style="overflow: hidden;">
   <div class="row justify-content-between">
     <div class="col-12 col-md-12 col-lg-8 mt-3">
       <%if @geomems.count > 0%>
