--- a/app/views/geomems/show.html.erb
+++ b/app/views/geomems/show.html.erb
@@ -26,7 +26,7 @@
         <% end %>
       </div>
       <%if @geomem.comments.any?%>
-        <%@geomem.comments.each do |comment|%>
+        <%@geomem.comments.order(created_at: :desc).each do |comment|%>
           <div class="comment">
             <div class="comment-avatar"></div>
             <div class ="comment-content">
