--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -53,12 +53,13 @@ p{
 }
 
 .show-pic{
-  max-width: 100%;
+  max-width: 500px;
 }
 
 @media screen and (max-width: 480px) {
   .show-pic {
-       height: auto;
+      max-width: 100%; 
+      height: auto;
        padding: 0px 16px;
   }
 }
