--- a/app/views/geomems/index.html.erb
+++ b/app/views/geomems/index.html.erb
@@ -1,4 +1,4 @@
-<div class="contnr" style="overflow: hidden;">
+<div class="contnr">
   <div class="row justify-content-between">
     <div class="col-12 col-md-12 col-lg-8 mt-3">
       <%if @geomems.count > 0%>
@@ -8,7 +8,7 @@
         <%@geomems.each do |memory|%>
           <%= link_to geomem_path(memory), class:"wrap-a" do %>
             <div class="polaroidnew" id="<%=memory.id%>">
-              <%= cl_image_tag memory.photo.key, height: 250, width: 250, crop: :fill %>
+              <%= cl_image_tag memory.photo.key, height: 250, width: 250,crop: :fill %>
               <p class="pol-lct mt-3"><%=memory.location%></p>
               <%if (Time.zone.now.day - memory.created_at.day) > 1%>
                 <p class="post-date">Posted <%=Time.zone.now.day - memory.created_at.day%> days ago</p>
