third attempt to fix annoying scrollover

--- a/app/views/geomems/index.html.erb
+++ b/app/views/geomems/index.html.erb
@@ -1,5 +1,5 @@
 <div class="contnr">
-  <div class="row justify-content-between">
+  <div class="row justify-content-between fix-scr">
     <div class="col-12 col-md-12 col-lg-8 mt-3">
       <%if @geomems.count > 0%>
         <h2 class="text-center"> <%= image_tag 'heartp.png', height: 25, width: 25 %> Here are your <%=@geomems.count%> memories <%= image_tag 'heartp.png', height: 25, width: 25 %></h2>
