--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -37,7 +37,7 @@ p{
   border-top: 16px;
   background-color: #fff;
   background-clip: border-box;
-  border: 1px solid rgba(0, 0, 0, 0.125);
+  border: 0px 1px 1px 1px solid rgba(0, 0, 0, 0.125);
   border-radius: 2px;
 }
 
