--- a/app/views/geomems/show.html.erb
+++ b/app/views/geomems/show.html.erb
@@ -20,8 +20,8 @@
           <%= simple_form_for([ @geomem, @comment ]) do |f| %>
             <%= f.input :username%>
             <%= f.input :content, as: :text %>
-            <%= f.submit "Send", class: "btn btn-primary send"%>
-            <a id="cancel-btn" href="#" onclick="return false;">Cancel</a>
+            <%= f.submit "Send", class: "btn send"%>
+            <a id="cancel-btn" class="btn cancel"href="#" onclick="return false;">Cancel</a>
           <% end %>
         </div>
       </div>
