--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -86,6 +86,7 @@ p{
   background-color: #a87ff5;
   &:hover{
     background-color: #8449f2; 
+    color: white;
   }
 }
 
@@ -95,5 +96,6 @@ p{
   background-color: #FD1015;
   &:hover{
     background-color: #c41417; 
+    color: white;
   }
 }
