--- a/app/views/geomems/show.html.erb
+++ b/app/views/geomems/show.html.erb
@@ -36,8 +36,10 @@
                   <p class="post-date">Posted <%=Time.zone.now.day - comment.created_at.day%> days ago</p>
                 <%elsif (Time.zone.now.day - comment.created_at.day) == 1 %>
                   <p class="post-date">Posted yesterday</p>
+                <%elsif (Time.zone.now.to_a[1] - comment.created_at.to_a[1]) >= 1%>
+                  <p class="post-date">Posted <%=Time.zone.now.to_a[1] - comment.created_at.to_a[1]%> minutes ago</p>
                 <%else%>
-                  <p class="post-date">Posted today</p>
+                  <p class="post-date">Posted now</p>
                 <%end%>
                 <p><%=comment.content%></p>
               </div>
