fixed posted time bug

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,11 +29,8 @@
     </div>
     <div class="footer">
       <div class="footer-links">
-        <a href="#"><i class="fab fa-github"></i></a>
-        <a href="#"><i class="fab fa-instagram"></i></a>
-        <a href="#"><i class="fab fa-facebook"></i></a>
-        <a href="#"><i class="fab fa-twitter"></i></a>
-        <a href="#"><i class="fab fa-linkedin"></i></a>
+        <a target="_blank" href="https://github.com/IvanReyesO7"><i class="fab fa-github"></i></a>
+        <a target="_blank" href="https://www.linkedin.com/in/ivan-reyes-9504/"><i class="fab fa-linkedin"></i></a>
       </div>
       <div class="footer-copyright"></div>
     </div>
