--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -42,3 +42,9 @@
 .fix-scr{
   max-width: 100%;
 }
+
+@media (min-width: 100px) and (max-width: 575px) {
+  .first-title{
+    font-size: 12px;
+  }
+}
