--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,6 +31,7 @@
       <div class="footer-links">
         <a target="_blank" href="https://github.com/IvanReyesO7"><i class="fab fa-github"></i></a>
         <a target="_blank" href="https://www.linkedin.com/in/ivan-reyes-9504/"><i class="fab fa-linkedin"></i></a>
+        <p style="font-size:10px;">IvanReyesO7</p>
       </div>
       <div class="footer-copyright"></div>
     </div>
