Made hover in comments look better

--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -50,7 +50,7 @@ p{
   line-height: 6px;
   padding: 16px 16px;
   &:hover{
-    background-color: #f0eeee;
+    background-color: #eee4ff;
   }
 }
 
