--- a/app/assets/stylesheets/pages/_new.scss
+++ b/app/assets/stylesheets/pages/_new.scss
@@ -9,5 +9,10 @@
   font-family: 'Roboto', sans-serif;
 }
 
-
+.show-link{
+  font-size: 10px;
+  margin-left: 16px;
+  color: #a87ff5;
+  margin-bottom: 16px;
+}
   
