--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -3,7 +3,7 @@
 @import "avatar";
 @import "navbar";
 
-#map{
+.map-index{
   height: 90vh;
   width: 100%;
   background-color: white;
@@ -47,8 +47,10 @@
   .first-title{
     font-size: 12px;
   }
-  #map{
+  .map-index{
     height: 50vh;
-    margin-left: 1vh;
+    width: 95vh;
+    margin-left: 2.5vh;
+    margin-right: 1.5vh;
   }
 }
