--- a/app/views/geomems/index.html.erb
+++ b/app/views/geomems/index.html.erb
@@ -29,6 +29,7 @@
     </div>
     <div class="col-12 col-md-12 col-lg-4 pt-3">
      <div id="map"
+     class="map-index"
      data-markers="<%= @markers.to_json %>"
      data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"></div>
      </div>
