Changed logo position

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -29,6 +29,11 @@
   padding-top: 6px;
 }
 
+.img-logo{
+  position: relative;
+  left: 24px;
+}
+
 @media screen and (max-width: 480px) {
   .logo a {
     font-size: 16px;
