--- a/app/views/geomems/index.html.erb
+++ b/app/views/geomems/index.html.erb
@@ -2,7 +2,7 @@
   <div class="row justify-content-between fix-scr">
     <div class="col-12 col-md-12 col-lg-8 mt-3">
       <%if @geomems.count > 0%>
-        <h2 class="text-center first-title"> <%= image_tag 'heartp.png', height: 20, width: 20 %> You have <%=@geomems.count%> memories <%= image_tag 'heartp.png', height: 20, width: 20 %></h2>
+        <h2 class="text-center first-title">-You have <%=@geomems.count%> memories-</h2>
       <%end%>
       <div class="cards grd">
         <%@geomems.each do |memory|%>
