--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
     <div class="flex-wrapper">
       <div class="banner d-flex justify-content-between">
         <div class="logo">
-          <%= image_tag 'world.png', height: 50, width: 59 %>
+          <%= image_tag 'world.png', height: 50, width: 59, class: "img-logo" %>
           <%= link_to "Geo-Memories" , geomems_path %>
         </div>
         <div class="add-new">
